--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=ServicoDeVendas
+server.port=8080
+logging.level.root=INFO
+logging.level.com.eduardo.projarq.t1.servicodevendas=DEBUG
+spring.main.banner-mode=console
