--- a/microservices/sales-registry-service/src/main/resources/application.yml
+++ b/microservices/sales-registry-service/src/main/resources/application.yml
@@ -6,30 +6,25 @@ spring:
     name: sales-registry-service
   
   datasource:
-    url: ${DATABASE_URL}
-    username: ${NEON_USERNAME}
-    password: ${NEON_PASSWORD}
-    driver-class-name: org.postgresql.Driver
+    url: ${DATASOURCE_URL}
   
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        connection:
-          provider_disables_autocommit: true
+    # properties:
+    #   hibernate:
+    #     dialect: org.hibernate.dialect.PostgreSQLDialect
+    # database-platform: org.hibernate.dialect.PostgreSQLDialect
   
   rabbitmq:
-    host: localhost
+    host: rabbitmq
     port: 5672
     username: admin
-    password: admin
 
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka-server:8761/eureka/
   instance:
     prefer-ip-address: true 
