--- a/microservices/.env
+++ b/microservices/.env
@@ -1,7 +1,5 @@
-NEON_HOST=ep-fancy-recipe-a4p1sbfv-pooler.us-east-1.aws.neon.tech
-NEON_DATABASE=ServicoVendas
-NEON_USERNAME=ServicoVendas_owner
-NEON_PASSWORD=npg_nl1Ib2ZqDFYj
-NEON_SSL_MODE=require
-DATABASE_URL=postgresql://ServicoVendas_owner:npg_nl1Ib2ZqDFYj@ep-fancy-recipe-a4p1sbfv-pooler.us-east-1.aws.neon.tech/ServicoVendas?sslmode=require
-DATASOURCE_URL=jdbc:postgresql://ServicoVendas_owner:npg_nl1Ib2ZqDFYj@ep-fancy-recipe-a4p1sbfv-pooler.us-east-1.aws.neon.tech/ServicoVendas?sslmode=require
+MONGO_HOST=mongo
+MONGO_PORT=27017
+MONGO_DATABASE=salesdb
+MONGO_USERNAME=root
+MONGO_PASSWORD=root
