--- a/microservices/docker-compose.yml
+++ b/microservices/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   rabbitmq:
     image: rabbitmq:3-management
@@ -15,6 +13,33 @@ services:
     networks:
       - servicodevendas-network
 
+  mongo:
+    image: mongo:latest
+    container_name: servicodevendas-mongo
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+    networks:
+      - servicodevendas-network
+
+  mongo-express:
+    image: mongo-express
+    container_name: servicodevendas-mongo-express
+    ports:
+      - "8084:8081"
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
+      ME_CONFIG_MONGODB_SERVER: mongo
+    networks:
+      - servicodevendas-network
+    depends_on:
+      - mongo
+
   eureka-server:
     image: openjdk:21-jdk-slim
     container_name: servicodevendas-eureka
@@ -28,7 +53,6 @@ services:
       - servicodevendas-network
     depends_on:
       - rabbitmq
-    restart: on-failure
 
   api-gateway:
     image: openjdk:21-jdk-slim
@@ -43,7 +67,6 @@ services:
       - servicodevendas-network
     depends_on:
       - eureka-server
-    restart: on-failure
 
   sales-service:
     image: openjdk:21-jdk-slim
@@ -61,7 +84,7 @@ services:
     depends_on:
       - eureka-server
       - rabbitmq
-    restart: on-failure
+      - mongo
 
   tax-service:
     image: openjdk:21-jdk-slim
@@ -76,7 +99,6 @@ services:
       - servicodevendas-network
     depends_on:
       - eureka-server
-    restart: on-failure
 
   sales-registry-service:
     image: openjdk:21-jdk-slim
@@ -94,11 +116,12 @@ services:
     depends_on:
       - eureka-server
       - rabbitmq
-    restart: on-failure
+      - mongo
 
 volumes:
   rabbitmq_data:
+  mongodb_data:
 
 networks:
   servicodevendas-network:
-    driver: bridge 
+    driver: bridge
