--- a/microservices/sales-registry-service/src/main/resources/application.yml
+++ b/microservices/sales-registry-service/src/main/resources/application.yml
@@ -5,22 +5,25 @@ spring:
   application:
     name: sales-registry-service
   
-  datasource:
-    url: ${DATASOURCE_URL}
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+      - org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
   
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    # properties:
-    #   hibernate:
-    #     dialect: org.hibernate.dialect.PostgreSQLDialect
-    # database-platform: org.hibernate.dialect.PostgreSQLDialect
+  data:
+    mongodb:
+      host: ${MONGO_HOST:localhost}
+      port: ${MONGO_PORT:27017}
+      database: ${MONGO_DATABASE:salesdb}
+      username: ${MONGO_USERNAME:root}
+      password: ${MONGO_PASSWORD:root}
+      authentication-database: admin
   
   rabbitmq:
     host: rabbitmq
     port: 5672
     username: admin
+    password: admin
 
 eureka:
   client:
